--- a/insight-back-end/package.json
+++ b/insight-back-end/package.json
@@ -36,7 +36,8 @@
     "mysql2": "^2.0.2",
     "node-schedule": "^1.3.2",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.2.18"
+    "typeorm": "^0.2.18",
+    "utf8": "^3.0.0"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
